k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ewallet-api
  namespace: ewallet
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ewallet-api.faisalaffan.com
      secretName: ewallet-api-tls
  rules:
    - host: ewallet-api.faisalaffan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ewallet-api
                port:
                  number: 8080
